feat(mobile): add live wind legend selection and current speed readout