@@ -4,11 +4,18 @@ import com.facebook.react.uimanager.annotations.ReactProp;
 public class WindManager extends SimpleViewManager<WindControl> {
   @Override
   public java.util.Map<String, Object> getExportedCustomDirectEventTypeConstants() {
-    return java.util.Collections.singletonMap("topDataStatus", java.util.Collections.singletonMap("registrationName", "onDataStatus"));
+    return java.util.Map.of(
+      "topDataStatus", java.util.Collections.singletonMap("registrationName", "onDataStatus"),
+      "topCenterWind", java.util.Collections.singletonMap("registrationName", "onCenterWind"));
   }
   public String getName() { return "MarisWindControl"; }
   protected WindControl createViewInstance(ThemedReactContext context) {
     return new WindControl(context);
+  }
+  @ReactProp(name = "sampleCoordinate")
+  public void sampleCoordinate(WindControl view, com.facebook.react.bridge.ReadableArray value) {
+    view.sampleCoordinate = value;
+    view.emitSample();
   }
   @ReactProp(name = "enabled")
   public void enabled(WindControl view, boolean value) {
